--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
   <div class="cancion active">
     <img src="castle.jpg" class="caratula" alt="Castle on the Hill">
     <div class="titulo">Castle on the Hill - Ed Sheeran</div>
-    <audio controls src="assets/0.mp3"></audio>
+    <audio controls src="assets/0.aac"></audio>
   </div>
 
   <div class="cancion">
     <img src="notears.jpg" class="caratula" alt="No Tears Left to Cry">
     <div class="titulo">No Tears Left to Cry - Ariana Grande</div>
-    <audio controls src="assets/1.mp3"></audio>
+    <audio controls src="assets/1.aac"></audio>
   </div>
 
   <div class="cancion">
     <img src="lucid.jpg" class="caratula" alt="Lucid Dreams">
     <div class="titulo">Lucid Dreams - Juice WRLD</div>
-    <audio controls src="assets/2.mp3"></audio>
+    <audio controls src="assets/2.aac"></audio>
   </div>
 
   <div class="cancion">
