--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
   <div class="cancion active">
     <img src="castle.jpg" class="caratula" alt="Castle on the Hill">
     <div class="titulo">Castle on the Hill - Ed Sheeran</div>
-    <audio controls src="assets/0.aac"></audio>
+    <audio src="assets/0.aac" volume="85%"></audio>
+</div>
   </div>
 
   <div class="cancion">
