--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
 <body>
 
 <div id="reproductor">
-  <div class="cancion active">
-    <img src="castle.jpg" class="caratula" alt="Castle on the Hill">
-    <div class="titulo">Castle on the Hill - Ed Sheeran</div>
-    <audio src="assets/0.aac" volume="85%"></audio>
-</div>
+<div class="cancion active"> <img src="castle.jpg" class="caratula" alt="Castle on the Hill"> 
+  <div class="titulo">Castle on the Hill - Ed Sheeran</div>
+  <!-- Aquí está el cambio -->
+  <audio controls src="castle.mp3"></audio> </div>  
   </div>
 
   <div class="cancion">
