--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="cancion active"> <img src="castle.jpg" class="caratula" alt="Castle on the Hill"> 
   <div class="titulo">Castle on the Hill - Ed Sheeran</div>
   <!-- Aquí está el cambio -->
-  <audio controls src="castle.mp3"></audio> </div>  
+ <audio src="assets/0.mp3" volume="85%"></audio> 
   </div>
 
   <div class="cancion">
