--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <div class="cancion">
     <img src="titanium.jpg" class="caratula" alt="Titanium">
     <div class="titulo">Titanium - David Guetta</div>
-    <audio controls src="assets/1.aa"></audio>
+    <audio controls src="assets/1.aac"></audio>
   </div>
 
   <div class="controles">
