--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Reproductor con Carátulas</title>
+  <title>Reproductor con Vinilo</title>
   <style>
     body {
       margin: 0;
@@ -44,8 +44,33 @@
       margin-bottom: 10px;
     }
 
-    audio {
-      width: 100%;
+    /* Botón vinilo */
+    .vinilo {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      border: 5px solid #333;
+      background: url('vinilo.png') center/cover no-repeat; /* Imagen de vinilo */
+      margin: 10px auto;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+    }
+
+    .vinilo img {
+      width: 60%;
+      height: 60%;
+      border-radius: 50%;
+      object-fit: cover;
+      margin: 20%;
+    }
+
+    .vinilo.playing {
+      animation: girar 3s linear infinite;
+    }
+
+    @keyframes girar {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
     }
 
     .controles {
@@ -66,6 +91,10 @@
     .btn:hover {
       color: #0ff;
     }
+
+    audio {
+      display: none; /* Ocultamos los controles nativos */
+    }
   </style>
 </head>
 <body>
@@ -74,25 +103,37 @@
   <div class="cancion active">
     <img src="castle.jpg" class="caratula" alt="Castle on the Hill">
     <div class="titulo">Castle on the Hill - Ed Sheeran</div>
-    <audio controls src="assets/0.mp3"></audio>
+    <div class="vinilo" onclick="togglePlay(this)">
+      <img src="castle.jpg" alt="Carátula">
+    </div>
+    <audio src="assets/0.mp3"></audio>
   </div>
 
   <div class="cancion">
     <img src="notears.jpg" class="caratula" alt="No Tears Left to Cry">
     <div class="titulo">No Tears Left to Cry - Ariana Grande</div>
-    <audio controls src="assets/2.aac"></audio>
+    <div class="vinilo" onclick="togglePlay(this)">
+      <img src="notears.jpg" alt="Carátula">
+    </div>
+    <audio src="assets/2.aac"></audio>
   </div>
 
   <div class="cancion">
     <img src="lucid.jpg" class="caratula" alt="Lucid Dreams">
     <div class="titulo">Lucid Dreams - Juice WRLD</div>
-    <audio controls src="assets/0.aac"></audio>
+    <div class="vinilo" onclick="togglePlay(this)">
+      <img src="lucid.jpg" alt="Carátula">
+    </div>
+    <audio src="assets/0.aac"></audio>
   </div>
 
   <div class="cancion">
     <img src="titanium.jpg" class="caratula" alt="Titanium">
     <div class="titulo">Titanium - David Guetta</div>
-    <audio controls src="assets/1.aac"></audio>
+    <div class="vinilo" onclick="togglePlay(this)">
+      <img src="titanium.jpg" alt="Carátula">
+    </div>
+    <audio src="assets/1.aac"></audio>
   </div>
 
   <div class="controles">
@@ -104,11 +145,40 @@
 <script>
   let indice = 0;
   const canciones = document.querySelectorAll('.cancion');
+  const audios = document.querySelectorAll('audio');
 
   function cambiarCancion(direccion) {
+    // Detener cualquier audio en reproducción
+    audios.forEach(a => {
+      a.pause();
+      a.currentTime = 0;
+      a.parentElement.querySelector('.vinilo').classList.remove('playing');
+    });
+
     canciones[indice].classList.remove('active');
     indice = (indice + direccion + canciones.length) % canciones.length;
     canciones[indice].classList.add('active');
+  }
+
+  function togglePlay(vinilo) {
+    const audio = vinilo.parentElement.querySelector('audio');
+
+    // Detener otros audios
+    audios.forEach(a => {
+      if (a !== audio) {
+        a.pause();
+        a.currentTime = 0;
+        a.parentElement.querySelector('.vinilo').classList.remove('playing');
+      }
+    });
+
+    if (audio.paused) {
+      audio.play();
+      vinilo.classList.add('playing');
+    } else {
+      audio.pause();
+      vinilo.classList.remove('playing');
+    }
   }
 </script>
 
