--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       bottom: 20px;
       right: 20px;
       width: 320px;
-      background: url('fondo-reproductor.jpg') center/cover no-repeat; 
+      background: url('https://i.ibb.co/KcWWf1Hg/descargar.png') center/cover no-repeat; 
       border-radius: 25px;
       box-shadow: 0 0 20px #0ff;
       overflow: hidden;
